# Posture-App

./: .gitignore  README.md  README.txt  posture.names  posture_guard.py  pyproject.toml  requirements.txt  test_backend.py  test_model.py  yolov3-obj.cfg
docs/week-1/: problem_statement.md  solution_concept.md  users_&_customers.md  validation.md
docs/week-2/: problem_statement.md  solution_concept.md  users_&_customers.md
docs/week-3/: problem_statement.md  solution_concept.md  users_&_customers.md  validation.md
docs/week-4/: problem_statement.md  solution_concept.md  users_&_customers.md  validation.md
docs/week-5/: problem_statement.md  solution_concept.md  users_&_customers.md  validation.md
docs/week-6/: problem_statement.md  solution_concept.md  users_&_customers.md  validation.md
docs/week-7/: problem_statement.md  solution_concept.md  users_&_customers.md  validation.md
docs/week-8/: problem_statement.md  solution_concept.md  users_&_customers.md  validation.md
src/: main.py
src/backend/: __init__.py  base.py  heuristic_pose.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  speech.py  utils.py  video_thread.py
src/ui/: __init__.py  helpers.py  main_window.py  overlay_window.py  settings_dialog.py
